--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Eduara Carpi</title>
-  <base href="https://dudscarpi.github.io/me/">
+  <base href="https://dudscarpi.github.io/mexx/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/carpi.png" sizes="16x16">
   <link rel="preconnect" href="https://fonts.gstatic.com">
